<resources>
    <string name="app_name">Day21Activity</string>
    <string name="imageView">photo</string>
    <string name="TextView">summary</string>
    <string name="textView1">education</string>
    <string name="textView2">skills</string>
    <string name="textView3">hobbies</string>
    <string name="textView4">professional</string>
    <string name="toggleButton1">togglebutton1</string>
    <string name="toggleButton2">togglebutton2</string>
    <string name="toggleButton3">togglebutton3</string>
    <string name="toggleButton4">togglebutton4</string>
    <string name="editText1">enter_section</string>
    <string name="editText2">append_text</string>
    <string name="button">button</string>

    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>
    <string name="professional">Professional</string>
    <string name="education">Education</string>
    <string name="hobbies">Hobbies</string>
    <string name="skills">Skills</string>
    <string name="button1">Button</string>
    <string name="back">back</string>
</resources>
